some log refinement